src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/C4A11.cd
/*
 * ******************************************************************************
 * MontiCore Language Workbench, www.monticore.de
 * Copyright (c) 2017, MontiCore, All rights reserved.
 *
 * This project is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 3.0 of the License, or (at your option) any later version.
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this project. If not, see <http://www.gnu.org/licenses/>.
 * ******************************************************************************
 */

package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram C4A11 {
  class C1 {
    String a = "str";

    int b = 1;
    Integer b2 = 1;
    int b3 = -1;
    Integer b4 = -1;

    float c = 1f;
    Float c2 = 1f;
    float c3 = 1.1f;
    Float c4 = 1.1f;
    float c5 = -1f;
    Float c6 = -1f;
    float c7 = -1.1f;
    Float c8 = -1.1f;

    double d = 0d;
    Double d2 = 0d;
    Double d3 = 1.0;
    double d4 = 1.0;
    Double d5 = 1.1d;
    double d6 = -0d;
    Double d7 = -0d;
    Double d8 = -1.0;
    double d9 = -1.0;
    Double d10 = -1.1d;
    
    
    long e1 = 1L;
    Long e2 = 1L;
    long e3 = -1L;
    Long e4 = -1L;

    Character f = 'a';
    char f2 = 'a';
  }  
}
