src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A11.cd
/*
 * ******************************************************************************
 * MontiCore Language Workbench, www.monticore.de
 * Copyright (c) 2017, MontiCore, All rights reserved.
 *
 * This project is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 3.0 of the License, or (at your option) any later version.
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this project. If not, see <http://www.gnu.org/licenses/>.
 * ******************************************************************************
 */

package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A11 {
  class C1 {
    String a = 1;
    
    int b = "str";
    Integer b2 = "str";
    
    float c = "str";
    float c2 = 1.1;
    Float c3 = 1.1;
    
    Double d = 1;
    double d2 = 1;
    
    long e = 1;
    Long e2 = 1;
   
    Character f = "a";
    char f2 = "a"; 
  }
}
